--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "cosmicjs": "^3.2.12",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
-    "react-scripts": "1.1.5"
+    "react-scripts": "1.1.5",
+    "spotify-web-api-js": "^1.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
