--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "dependencies": {
     "@material-ui/core": "^3.0.1",
     "cosmicjs": "^3.2.12",
+    "lodash.flatten": "^4.4.0",
+    "lodash.startcase": "^4.4.0",
+    "lodash.uniq": "^4.5.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-scripts": "1.1.5",
