refactoring as I write the blog

--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "oldschoolshuffle",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "7.10.0"
+  },
   "dependencies": {
     "@material-ui/core": "^3.0.1",
     "cosmicjs": "^3.2.12",
@@ -19,5 +22,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "license": "MIT"
 }
