changed productionServer.js to prodserver.js and adjusted npm script to productionstart because build failed on heroku. going to try again

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "productionStart": "npm run build && node productionServer.js"
+    "productionstart": "npm run build && node prodserver.js"
   },
   "license": "MIT"
 }
