--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
     "spotify-web-api-js": "^1.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "developmentstart": "react-scripts start",
+    "start": "npm run build && node prodserver.js",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "productionstart": "npm run build && node prodserver.js"
+    "eject": "react-scripts eject"
   },
   "license": "MIT"
 }
