--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "scripts": {
     "developmentstart": "react-scripts start",
-    "start": "npm run build && node prodserver.js",
+    "start": "npm run build && node app.js",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
