--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@material-ui/core": "^3.0.1",
     "cosmicjs": "^3.2.12",
+    "eslint-module-utils": "^2.2.0",
     "lodash.chunk": "^4.2.0",
     "lodash.flatten": "^4.4.0",
     "lodash.startcase": "^4.4.0",
