FINALLY. It was a stupid json issue on the post and forgetting to put a space after Bearer in the authorization token in tempCreatePlaylists

--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "spotify-web-api-js": "^1.1.1"
   },
   "scripts": {
-    "developmentstart": "react-scripts start",
-    "start": "npm run build && node app.js",
+    "start": "react-scripts start",
+    "productionstart": "npm run build && node app.js",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
