--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@material-ui/core": "^3.0.1",
     "cosmicjs": "^3.2.12",
     "eslint-module-utils": "^2.2.0",
+    "express": "^4.16.3",
     "lodash.chunk": "^4.2.0",
     "lodash.flatten": "^4.4.0",
     "lodash.startcase": "^4.4.0",
